<resources>
    <string name="app_name">Fogo</string>
    <string name="title_activity_navegation">navegation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="todo">TODO</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="textLogin">Welcome back, please login to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loginBtn">Login</string>
    <string name="dontHaveAcounttxt">Don\'t have an account?</string>
    <string name="sign_inBtn">Sign in</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="do_you_already_have_an_account">Do you already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_inBTN">Sign in</string>
    <string name="welcome_register_to_enjoy_fogo">Welcome, register to enjoy fogo</string>
    <string name="imageprofile">TODO</string>
    <string name="logout">Logout</string>
    <string name="imageacc">TODO</string>
    <string name="IMV">TODO</string>
    <string name="profileimg">TODO</string>
    <string name="delete_account">Delete account</string>
    <string name="prefs_file">com.estebi.fogo1.PREFERENCE_FILE_KEY</string>
    <string name="need_an_account">Need an account?</string>
    <string name="emailLabel">Email</string>
    <string name="sing_up">SING UP</string>
    <string name="loginBtnTxt">LOGIN</string>
    <string name="passwordd">Password</string>
    <string name="addUserNameData">Name</string>
    <string name="introduce_your_data">Introduce Your Data!</string>
    <string name="got_it">GOT IT!</string>
    <string name="desc">desc</string>
    <string name="imgeviewposts">TODO</string>
    <string name="add_post_TITLE">Add post!</string>
    <string name="AddPostHint">Add title</string>
    <string name="description">Description</string>
    <string name="up_post_button">Up post!</string>
    <string name="todos">TODO</string>
    <string name="nameOfOtherUser">TextView</string>
    <string name="todo3">TODO</string>
    <string name="update_post">Update Post</string>
    <string name="titleUpdatePost">Title</string>
    <string name="update_post_btn">Update Post</string>
    <string name="delete_your_post">Delete your post</string>
    <string name="update_your_profile">Update Your Profile</string>
    <string name="name">Name</string>
    <string name="update_password">Update Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="update_profile">Update profile</string>
    <string name="delete_profile">Delete profile</string>
</resources>